--- a/travelA.css
+++ b/travelA.css
@@ -1,6 +1,7 @@
 body{
     font-family: 'Courier New', monospace;
     background-color: #E0E0E2;
+    flex:1;
 }
 #topBar{
     position:fixed;
@@ -25,15 +26,15 @@ body{
     border-left-style:solid;
     border-color:#0A0D00;
     color:#721817;
-    font-size:5vh;
+    font-size:2vw;
 }
-#topBarBtn p{
-    margin-top:2vh;
+#topBarBtn p,#topBarBtn form{
+    margin-top:5vh;
     margin-left:1vw;
 }
 #topBarTitle{
     color:#0A0D00;
-    font-size:10vh;
+    font-size:6vw;
 }
 #mainContent{
     display:grid;
@@ -48,20 +49,20 @@ body{
     border-style:solid;
     border-color: #FF761A;
 }
-#rightContent{
-    position:fixed;
-    margin-top:10vh;
-    right:0;
-    margin-right:2vw;
-    height:84vh;
-    width:22vw;
+#rightContent {
+    position: fixed;
+    margin-top: 10vh;
+    right: 0;
+    margin-right: 2vw;
+    height: 84vh;
+    width: 22vw;
     background-color: #839791;
     visibility: hidden;
     border-right-style: dashed;
-    border-color:#0A0D00;
-    font-size:2vw;
+    border-color: #0A0D00;
+    font-size: 2vw;
     padding: 1%;
-    overflow:scroll;
+    overflow: scroll;
 }
 #rightContent p{
     font-size:1vw;
@@ -86,4 +87,25 @@ body{
 }
 .travelOption:hover{
     border-color:#721817;
+}
+#emailTxt,#emailBtn {
+    font-size: 1.5vw;
+}
+#emailForm {
+    display: flex;
+    flex-flow: row wrap;
+    align-items: center;
+}
+#page-container {
+    position: relative;
+    min-height: 170vh;
+}
+#foote {
+    width: 100%;
+    height: 100px;
+    position: absolute;
+    bottom: 0;
+    background-color: #839791;
+    font-size:2vw;
+    text-align:center;
 }
